--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: "Avenir Black";
+  src: url(assets/Avenir\ Black.ttf);
+}
+
+@font-face {
+  font-family: "Avenir Book";
+  src: url(assets/Avenir\ Book.ttf);
+}
+
+@font-face {
+  font-family: "Avenir Heavy";
+  src: url(assets/Avenir\ Heavy.ttf);
+}
+
 html,
 body {
   height: 100%;
@@ -5,8 +20,54 @@ body {
 }
 
 .container {
-  width: 100%;
+  width: 80%;
   height: 100%;
   display: flex;
   justify-content: center;
+  margin-top: 50px;
+}
+
+.caroussel-container {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  color: #727272;
+}
+
+h1.maurice-lebrun {
+  font-family: "Avenir Black";
+  margin: 0;
+  font-size: 60px;
+  line-height: 0.8;
+}
+
+p.headline {
+  font-family: "Avenir Book";
+  margin: 0;
+}
+
+p.location {
+  font-family: "Avenir Book";
+  margin: 0;
+}
+
+span.word {
+  font-family: "Avenir Book";
+  font-weight: bold;
+  font-style: oblique;
+  cursor: pointer;
+}
+
+span.word-highlight {
+  font-family: "Avenir Book";
+  color: black;
+}
+
+span.word:hover {
+  font-family: "Avenir Book";
+  color: black;
+}
+
+div[class^="images-"],
+div[class*=" images-"] {
+  display: none;
 }
